--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <main>
     <article id="container">
       <figure>
-          <img id="image" src="../images/image-qr-code.png" alt="qr-code" title="imagem do qr-code">
+          <img id="image" src="./images/image-qr-code.png" alt="qr-code" title="imagem do qr-code">
       <figcaption><p>Improve your front-end <br> skills by building projects</p></figcaption>
       <p id="scan">Scan the QR code to visit Frontend <br> Mentor and take your coding skills to <br> the next level</p>  
       </figure>
